--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
             <div class="abt-flex">
                 <img src="1.png" class="pp">
                 <p class="abt-parg">
-                    My name is Ayah Al-Ramahi. I am a computer engineering student in the University Of Jordan. I am interested in several
-                    topics like: calligraphy, technolog, cyptography and computers. I loved programming and decided to study computer
+                    My name is Ayah Al-Ramahi. I am a computer engineering student at the University Of Jordan. I am interested in several
+                    topics like: calligraphy, technology, cyptography and computers. I loved programming and decided to study computer
                     engineering when I took an online course on <a href="https://www.edx.org/">edx</a> called 
                     <a href="https://www.edx.org/course/cs50s-introduction-computer-science-harvardx-cs50x">CS50</a> offered by Harvard university. 
-                    In my first year of university I started attending competitive programming trainings and participated in several ACM 
-                    contests. I like  self-learning and I have a constant appetite for knowledge and experiments. In my free time I read 
-                    books, wander with my friends exploring the world, improve my handwriting or surf the oceans of interesting fields 
+                    In my first year of university, I started attending competitive programming trainings and participating in several ACM 
+                    contests.In my free time I read books, wander with my friends exploring the world, improve my handwriting and surf the oceans of interesting fields 
                     in computer science and engineering.
                 </p>
             </div>
