--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title>Ayah Al-Ramahi</title>
+        <title>Ayah Ramahi</title>
         <meta name="google-site-verification" content="13aj4lNzg1cB0TJk-985k6qfR1GvdO-_4qccLK-Sbg8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="nav-bar " id="top">
-            <a href="#top">Ayah Al Ramahi</a>
+            <a href="#top">Ayah Ramahi</a>
             <div class="parts">
                 <a href="#about">About</a>
                 <a href="#work">Work</a>
@@ -25,7 +25,7 @@
             <div class="abt-flex">
                 <img src="1.png" class="pp">
                 <p class="abt-parg">
-                    My name is Ayah Al-Ramahi. I am a computer engineering student at the University Of Jordan. I am interested in several
+                    My name is Ayah Ramahi. I am a computer engineering student at the University Of Jordan. I am interested in several
                     topics like: calligraphy, technology, cyptography and computers. I loved programming and decided to study computer
                     engineering when I took an online course on <a href="https://www.edx.org/">edx</a> called 
                     <a href="https://www.edx.org/course/cs50s-introduction-computer-science-harvardx-cs50x">CS50</a> offered by Harvard university. 
@@ -103,7 +103,7 @@
                 <a href="https://www.goodreads.com/user/show/27668254-ayah-al-ramahi" target="_blank"><i class="fab fa-goodreads"></i></a>
                 <a href="https://www.quora.com/profile/Ayah-28" target="_blank"><i class="fab fa-quora"></i></a>
             </nav>
-            <h3>2018&copy; Ayah Al-Ramahi</h3>
+            <h3>2018&copy; Ayah Ramahi</h3>
         </div>
     </body>
 </html>
