--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="name">
-            <img class="intro-img" src="test4.jpg">
+            <img class="intro-img" src="pp.jpg">
         </div>
         <div class="main-part" id="about">
             <h1>About</h1>
