--- a/index.html
+++ b/index.html
@@ -9,21 +9,18 @@
     </head>
     <body>
         <div class="nav-bar " id="top">
-            <a href="#top">Ayah Ramahi</a>
+            <a href="#top" id="main_name">Ayah Ramahi</a>
             <div class="parts">
                 <a href="#about">About</a>
                 <a href="#work">Work</a>
-                <a href="/ayahramahiCV.pdf" download>Resume</a>
+                <a href="ayahramahiCV.pdf" download>Resume</a>
                 <a href="#contact">Contact</a>
             </div>
-        </div>
-        <div class="name">
-            <img class="intro-img" src="pp1.jpg">
         </div>
         <div class="main-part" id="about">
             <h1>About</h1>
             <div class="abt-flex">
-                <img src="1.png" class="pp">
+                <img src="img/personal_photo.png" class="pp">
                 <p class="abt-parg">
                     My name is Ayah Ramahi. I am a computer engineering student at the University Of Jordan. I am interested in several
                     topics like: calligraphy, technology, cyptography and computers. I loved programming and decided to study computer
@@ -42,14 +39,14 @@
                 <i class="fab fa-linux"></i>
                 <i class="fab fa-windows"></i>
                 <i class="fab fa-java"></i>
-                <img class="icon" src="3.png">
+                <img class="icon" src="img/cpp.png">
             </nav>
     </div>
         <hr>
         <div class="main-part" id="work">
             <h1>Work</h1>
             <div class="work-part" id="acm">
-                    <img src="acm.png">
+                    <img src="img/acm.png">
                     <p>
                             <b>ACM Competitions Participation</b> </br> </br>
                             I have participated in several ACM contests including 2017 national contest (JCPC) where
@@ -61,7 +58,7 @@
             </div>
             </br> </br> </br> </br>
             <div class="work-part">
-                <a href="5.jpg" class="cert"> <img src="5.jpg"> </a>
+                <a href="img/leadership.jpg" class="cert"> <img src="img/leadership.jpg"> </a>
                 <p>
                         <b>Youth Leadership Development Program </b></br> </br>
                         After a whole week of assessment , where we were being watched by mentors and engaged in several activities ,
@@ -76,7 +73,7 @@
             </div>
             </br> </br> </br> </br>
             <div class="work-part">
-                <a href="6.PNG" class="cert"><img src="6.PNG"> </a>
+                <a href="img/coursera_cert.PNG" class="cert"><img src="img/coursera_cert.PNG"> </a>
                 <p>
                         <b>Personal Education</b></br> </br>
                         I have used <a href="">coursera.org</a>, a massive open online course (MOOC) platform, to take several courses offered by
