--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/projects/quotr.jpg" alt="">
+            <img class="img-fluid" src="img/projects/quotr.JPG" alt="">
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
@@ -124,7 +124,7 @@
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0 ">
 
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/projects/a-read.jpg" alt="">
+            <img class="img-fluid" src="img/projects/a-read.JPG" alt="">
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
@@ -147,7 +147,7 @@
         <!-- Project Three Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0 ">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/projects/ju-prog-club.jpg" alt="">
+            <img class="img-fluid" src="img/projects/ju-prog-club.JPG" alt="">
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
@@ -169,7 +169,7 @@
         <!-- Project Four Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0 ">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/projects/toDo-index.jpg" alt="">
+            <img class="img-fluid" src="img/projects/toDo-index.JPG" alt="">
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
@@ -311,7 +311,7 @@
           <!-- Activitie Five Row -->
           <div class="row justify-content-center no-gutters">
             <div class="col-lg-6">
-              <img class="img-fluid" src="img/coursera_cert.png" alt="">
+              <img class="img-fluid" src="img/coursera_cert.PNG" alt="">
             </div>
             <div class="col-lg-6 order-lg-first">
               <div class="bg-black text-center h-100 project">
