--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           <a href="https://web.facebook.com/ayah.alramahi" class="mx-2" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://web.facebook.com/ayah.alramahi" class="mx-2" target="_blank">
+          <a href="https://github.com/AyahRamahi" class="mx-2" target="_blank">
             <i class="fab fa-github"></i>
           </a>
           <a href="https://www.goodreads.com/user/show/27668254-ayah-al-ramahi" class="mx-2" target="_blank">
