--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Personal website">
     <meta name="author" content="Ayah Ramahi">
+	<link rel="icon" type="image/x-icon" href="img/logo.JPG">
     <meta name="google-site-verification" content="13aj4lNzg1cB0TJk-985k6qfR1GvdO-_4qccLK-Sbg8" />
     <title>Ayah Ramahi</title>
 
