--- a/test.html
+++ b/test.html
@@ -13,7 +13,10 @@
 				background-color: #161618;
 			}
 			.content{
-				vertical-align: middle;
+				margin-top: 15%;
+				width:100%;
+				margin-left:auto;
+				margin-right:auto;
 			}
 			h3{
 				text-align: center;
@@ -21,9 +24,11 @@
 				color:white;
 				font-size: 5.5em;
 				font-weight: 100;
+				margin-bottom: 0;
 			}
 			h5{
-				color:gray;
+				margin-top:0;
+				color:rgb(84, 97, 108);
 				font-family: monospace;
 				font-size: 2em;
 				text-align: center;
@@ -32,19 +37,21 @@
 				text-align:center;
 			}
 			i{
-				color:gray;
+				font-size: 1.2em;
+				color: rgb(84, 97, 108);
 				margin: 1% 1%;
 				font-family: monospace;
 				font-style: normal;
 			}
 			a{
-				color:gray;
+				color: rgb(84, 97, 108);
 				padding: 0.5% 0.5% 0.5% 0.5%;
 				border-radius: 5px;
 			}
 			a:hover{
 				color:white;
-				background-color: rgb(110, 167, 211);
+				transition: background-color 0.7s ease;
+				background-color: rgb(170, 218, 236);
 			}
 		</style>
 	</head>
