--- a/test.html
+++ b/test.html
@@ -7,7 +7,9 @@
 		<link rel="icon" type="image/x-icon" href="img/logo.JPG">
 		
 		<title>Ayah Ramahi</title>
-		
+		<link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+
 		<style>
 			html {
 				background-color: #161618;
@@ -20,33 +22,35 @@
 			}
 			h3{
 				text-align: center;
-				font-family: monospace;
+				font-family: 'Source Code Pro', monospace;
 				color:white;
-				font-size: 5.5em;
+				font-size: 5vw;
 				font-weight: 100;
 				margin-bottom: 0;
 			}
 			h5{
 				margin-top:0;
 				color:rgb(84, 97, 108);
-				font-family: monospace;
-				font-size: 2em;
+				font-family: 'Source Code Pro', monospace;
+				font-size: 2vw;
 				text-align: center;
 			}
 			.bar{
 				text-align:center;
 			}
 			i{
-				font-size: 1.2em;
-				color: rgb(84, 97, 108);
+				font-size: 1.4vw;
 				margin: 1% 1%;
-				font-family: monospace;
+				font-family: 'Source Code Pro', monospace;
 				font-style: normal;
 			}
 			a{
-				color: rgb(84, 97, 108);
 				padding: 0.5% 0.5% 0.5% 0.5%;
 				border-radius: 5px;
+				text-decoration: none;
+			}
+			a {
+				color: rgb(84, 97, 108);
 			}
 			a:hover{
 				color:white;
