--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 				background-color: #161618;
 			}
 			.content{
-				margin-top: 15%;
+				margin-top: 15vw;
 				width:100%;
 				margin-left:auto;
 				margin-right:auto;
