--- a/test.html
+++ b/test.html
@@ -20,15 +20,16 @@
 				margin-left:auto;
 				margin-right:auto;
 			}
-			h3{
+			.name{
 				text-align: center;
 				font-family: 'Source Code Pro', monospace;
 				color:white;
 				font-size: 5vw;
-				font-weight: 100;
+				font-weight: lightest;
+
 				margin-bottom: 0;
 			}
-			h5{
+			.desc{
 				margin-top:0;
 				color:rgb(84, 97, 108);
 				font-family: 'Source Code Pro', monospace;
@@ -61,8 +62,8 @@
 	</head>
 	<body>
 		<div class="content">
-			<h3>Ayah Ramahi</h3>
-			<h5>Computer Engineering Undergraduate @UJ</h5>
+			<p class="name">Ayah Ramahi</p>
+			<p class="desc">Computer Engineering Undergraduate @UJ</p>
 			<div class="bar">
 				<i><a href="">About</a></i>
 				<i><a href="">Education</a></i>
