--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 				background-color: #161618;
 			}
 			.content{
-				margin-top: 15vw;
+				margin-top: 30vh;
 				width:100%;
 				margin-left:auto;
 				margin-right:auto;
@@ -24,7 +24,7 @@
 				text-align: center;
 				font-family: 'Source Code Pro', monospace;
 				color:white;
-				font-size: 5vw;
+				font-size: 15vh;
 				font-weight: lightest;
 
 				margin-bottom: 0;
@@ -33,14 +33,14 @@
 				margin-top:0;
 				color:rgb(84, 97, 108);
 				font-family: 'Source Code Pro', monospace;
-				font-size: 2vw;
+				font-size: 5vh;
 				text-align: center;
 			}
 			.bar{
 				text-align:center;
 			}
 			i{
-				font-size: 1.4vw;
+				font-size: 3vh;
 				margin: 1% 1%;
 				font-family: 'Source Code Pro', monospace;
 				font-style: normal;
@@ -51,13 +51,14 @@
 				text-decoration: none;
 			}
 			a {
-				color: rgb(84, 97, 108);
+				color: rgb(84, 97, 90);
 			}
 			a:hover{
 				color:white;
 				transition: background-color 0.7s ease;
 				background-color: rgb(170, 218, 236);
 			}
+
 		</style>
 	</head>
 	<body>
