--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 				background-color: #161618;
 			}
 			.content{
-				margin-top: 30vh;
+				margin-top: 30vmin;
 				width:100%;
 				margin-left:auto;
 				margin-right:auto;
@@ -24,7 +24,7 @@
 				text-align: center;
 				font-family: 'Source Code Pro', monospace;
 				color:white;
-				font-size: 15vh;
+				font-size: 15vmin;
 				font-weight: lightest;
 
 				margin-bottom: 0;
@@ -33,14 +33,14 @@
 				margin-top:0;
 				color:rgb(84, 97, 108);
 				font-family: 'Source Code Pro', monospace;
-				font-size: 5vh;
+				font-size: 5vmin;
 				text-align: center;
 			}
 			.bar{
 				text-align:center;
 			}
 			i{
-				font-size: 3vh;
+				font-size: 3vmin;
 				margin: 1% 1%;
 				font-family: 'Source Code Pro', monospace;
 				font-style: normal;
