--- a/test.html
+++ b/test.html
@@ -7,7 +7,6 @@
 		<link rel="icon" type="image/x-icon" href="img/logo.JPG">
 		
 		<title>Ayah Ramahi</title>
-		<link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 
 		<style>
@@ -58,7 +57,18 @@
 				transition: background-color 0.7s ease;
 				background-color: rgb(170, 218, 236);
 			}
-
+			@media only screen and (max-width: 600px) {
+				.name {
+					font-size: 11vmin;
+				}
+				.desc{
+					font-size: 4vmin;
+				}
+				i{
+					font-size: 3vmin;
+					margin: 10px 10px ;
+				}
+			}
 		</style>
 	</head>
 	<body>
