--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@
 				text-decoration: none;
 			}
 			a {
-				color: rgb(84, 97, 90);
+				color: ;
 			}
 			a:hover{
 				color:white;
@@ -58,6 +58,9 @@
 				background-color: rgb(170, 218, 236);
 			}
 			@media only screen and (max-width: 600px) {
+				.content {
+					margin-top: 35vh;
+				}
 				.name {
 					font-size: 11vmin;
 				}
