--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
 				text-align: center;
 				font-family: 'Source Code Pro', monospace;
 				color:white;
-				font-size: 15vmin;
+				font-size: 13vmin;
 				font-weight: lightest;
 
 				margin-bottom: 0;
@@ -50,7 +50,7 @@
 				text-decoration: none;
 			}
 			a {
-				color: ;
+				color: #a0dcff;
 			}
 			a:hover{
 				color:white;
@@ -69,7 +69,8 @@
 				}
 				i{
 					font-size: 3vmin;
-					margin: 10px 10px ;
+					display:inline-block;
+					margin: 10px 10px 10px 10px;
 				}
 			}
 		</style>
