--- a/test.html
+++ b/test.html
@@ -7,6 +7,9 @@
 		<link rel="icon" type="image/x-icon" href="img/logo.JPG">
 		
 		<title>Ayah Ramahi</title>
+
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 
 		<style>
@@ -57,6 +60,21 @@
 				transition: background-color 0.7s ease;
 				background-color: rgb(170, 218, 236);
 			}
+			.social a{
+				color:gray !important;
+			}
+			.social a:hover {
+				background-color: #161618;
+				transition: color 0.7s ease;
+				color:white;
+			}
+			.social {
+				text-align: center;
+				position: fixed;
+				bottom:0;
+				right:0;
+				left:0;
+			}
 			@media only screen and (max-width: 600px) {
 				.content {
 					margin-top: 35vh;
@@ -88,5 +106,23 @@
 				<i><a href="">Contact</a></i>
 			</div>
 		</div>
+		<div class="social">
+	        <a href="mailto:ayah_alramahi@yahoo.com" target="_blank">
+	        	<i class="fas fa-envelope"></i>
+	        </a>
+		    <a href="http://www.linkedin.com/in/ayahramahi" target="_blank">
+		    	<i class="fab fa-linkedin-in"></i>
+		    </a>
+		    <a href="https://web.facebook.com/ayah.alramahi" target="_blank">
+		   		<i class="fab fa-facebook-f"></i>
+		    </a>
+		    <a href="https://github.com/AyahRamahi" target="_blank">
+		     	<i class="fab fa-github"></i>
+		    </a>
+		    <a href="https://www.goodreads.com/user/show/27668254-ayah-al-ramahi" target="_blank">
+		    	<i class="fab fa-goodreads-g"></i>
+		    </a>
+        </div>
+
 	</body>
 </html>
