--- a/test.html
+++ b/test.html
@@ -75,6 +75,9 @@
 				right:0;
 				left:0;
 			}
+			::selection {
+				color: #1f8eef;
+			}
 			@media only screen and (max-width: 600px) {
 				.content {
 					margin-top: 35vh;
