--- a/test.html
+++ b/test.html
@@ -25,11 +25,10 @@
 			.name{
 				text-align: center;
 				font-family: 'Source Code Pro', monospace;
-				color:white;
 				font-size: 13vmin;
 				font-weight: lightest;
-
 				margin-bottom: 0;
+				color:white;
 			}
 			.desc{
 				margin-top:0;
@@ -52,13 +51,9 @@
 				border-radius: 5px;
 				text-decoration: none;
 			}
-			a {
-				color: #a0dcff;
-			}
 			a:hover{
-				color:white;
 				transition: background-color 0.7s ease;
-				background-color: rgb(170, 218, 236);
+				background-color: rgba(255, 255, 255,0.3);
 			}
 			.social a{
 				color:gray !important;
@@ -101,11 +96,11 @@
 			<p class="name">Ayah Ramahi</p>
 			<p class="desc">Computer Engineering Undergraduate @UJ</p>
 			<div class="bar">
-				<i><a href="">About</a></i>
-				<i><a href="">Education</a></i>
-				<i><a href="">Projects</a></i>
-				<i><a href="">Resume</a></i>
-				<i><a href="">Activities</a></i>
+				<i><a style="color:#ef971e;" href="">About</a></i>
+				<i><a style="color:#1eef56;" href="">Experience</a></i>
+				<i><a style="color:#1f8eef;" href="">Resume</a></i>
+				<i><a style="color:#efe81e;" href="">Education</a></i>
+				<i><a style="color:#ef1e37;" href="">Projects</a></i>
 			</div>
 		</div>
 		<div class="social">
