--- a/test.html
+++ b/test.html
@@ -52,8 +52,10 @@
 				text-decoration: none;
 			}
 			a:hover{
-				transition: background-color 0.7s ease;
-				background-color: rgba(255, 255, 255,0.3);
+				transition: background-color 0.3s ease-out;
+				background-color: rgba(255, 255, 255,0.1);
+				color:white !important;
+				transition: color 0s ease-out;
 			}
 			.social a{
 				color:gray !important;
