--- a/test/test.html
+++ b/test/test.html
@@ -98,11 +98,11 @@
 			<p class="name">Ayah Ramahi</p>
 			<p class="desc">Computer Engineering Undergraduate @UJ</p>
 			<div class="bar">
-				<i><a style="color:#ef971e;" href="">About</a></i>
-				<i><a style="color:#1eef56;" href="">Experience</a></i>
+				<i><a style="color:#ef971e;" href="about.html">About</a></i>
+				<i><a style="color:#1eef56;" href="experience.html">Experience</a></i>
 				<i><a style="color:#1f8eef;" href="">Resume</a></i>
-				<i><a style="color:#efe81e;" href="">Education</a></i>
-				<i><a style="color:#ef1e37;" href="">Projects</a></i>
+				<i><a style="color:#efe81e;" href="education.html">Education</a></i>
+				<i><a style="color:#ef1e37;" href="projects.html">Projects</a></i>
 			</div>
 		</div>
 		<div class="social">
