--- a/test/test.html
+++ b/test/test.html
@@ -92,11 +92,23 @@
 				}
 			}
 		</style>
+		<script>
+			window.onload = function(){
+				load_quote();
+				function load_quote(){
+					var quotes =[
+						"You've got the words to change a nation but you're biting your tongue.",
+						"It's just a matter of time before we learn how to fly!"
+					];
+					document.getElementById("quote").textContent = quotes[Math.floor(Math.random() * quotes.length)];
+				};
+			}
+		</script>
 	</head>
 	<body>
 		<div class="content">
 			<p class="name">Ayah Ramahi</p>
-			<p class="desc">Computer Engineering Undergraduate @UJ</p>
+			<p class="desc" id="quote"></p>
 			<div class="bar">
 				<i><a style="color:#ef971e;" href="about.html">About</a></i>
 				<i><a style="color:#1eef56;" href="experience.html">Experience</a></i>
@@ -119,6 +131,5 @@
 		    	<i class="fab fa-goodreads-g"></i>
 		    </a>
         </div>
-
 	</body>
 </html>
