--- a/test/test.html
+++ b/test/test.html
@@ -97,9 +97,9 @@
 				load_quote();
 				function load_quote(){
 					var quotes [
-						    "You've got the words to change a nation but you're biting your tongue."
+						    "You've got the words to change a nation but you're biting your tongue.",
 						    "It's just a matter of time before we learn how to fly!",
-						    "Our deepest fear is not that we are inadequate. Our deepest fear is that we are powerful beyond measure."
+						    "Our deepest fear is not that we are inadequate. Our deepest fear is that we are powerful beyond measure.",
 						    "Know thyself. ",
 						    "To thine own self be true!",
 						    "Chaos is order yet undeciphered.",
