--- a/test/test.html
+++ b/test/test.html
@@ -96,7 +96,7 @@
 			window.onload = function(){
 				load_quote();
 				function load_quote(){
-					var quotes [
+					var quotes = [
 						    "You've got the words to change a nation but you're biting your tongue.",
 						    "It's just a matter of time before we learn how to fly!",
 						    "Our deepest fear is not that we are inadequate. Our deepest fear is that we are powerful beyond measure.",
