--- a/test/test.html
+++ b/test/test.html
@@ -110,7 +110,8 @@
 						    "I'll search the universe.",
 						    "Be afraid and do it anyway!",
 						    "But only the fearless can be great.",
-						    "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+						    "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...",
+						    "It ain't me."
 						];
 					document.getElementById("quote").textContent = quotes[Math.floor(Math.random() * quotes.length)];
 				};
