--- a/test/test.html
+++ b/test/test.html
@@ -111,7 +111,8 @@
 						    "Be afraid and do it anyway!",
 						    "But only the fearless can be great.",
 						    "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...",
-						    "It ain't me."
+						    "It ain't me.",
+						    "All this time I was finding myself, and I didn't know I was lost."
 						];
 					document.getElementById("quote").textContent = quotes[Math.floor(Math.random() * quotes.length)];
 				};
