--- a/test/test.html
+++ b/test/test.html
@@ -112,7 +112,8 @@
 						    "But only the fearless can be great.",
 						    "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...",
 						    "It ain't me.",
-						    "All this time I was finding myself, and I didn't know I was lost."
+						    "All this time I was finding myself, and I didn't know I was lost.",
+						    "Go forth and have no fear."
 						];
 					document.getElementById("quote").textContent = quotes[Math.floor(Math.random() * quotes.length)];
 				};
