--- a/test/test.html
+++ b/test/test.html
@@ -114,7 +114,7 @@
 						    "It ain't me.",
 						    "All this time I was finding myself, and I didn't know I was lost.",
 						    "Go forth and have no fear.",
-						    "Lost in your mind? I wanna know."
+						    "Lost in your mind? I wanna know..."
 						];
 					document.getElementById("quote").textContent = quotes[Math.floor(Math.random() * quotes.length)];
 				};
