update name font

--- a/test/test.html
+++ b/test/test.html
@@ -5,11 +5,12 @@
 		<meta name="description" content="Personal website">
 		<meta name="author" content="Ayah Ramahi">
 		<link rel="icon" type="image/x-icon" href="img/logo.JPG">
-		
+
 		<title>Ayah Ramahi</title>
 
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
+		<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
+		
 		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 
 		<style>
@@ -24,9 +25,9 @@
 			}
 			.name{
 				text-align: center;
-				font-family: 'Source Code Pro', monospace;
-				font-size: 13vmin;
-				font-weight: lightest;
+				font-family: 'Tangerine', cursive;
+				font-size: 15vmin;
+				font-weight: lightest !important;
 				margin-bottom: 0;
 				color:white;
 			}
@@ -73,7 +74,7 @@
 				left:0;
 			}
 			#quote {
-				color:#161618;	
+				color:#161618;
 			}
 			::selection {
 				color: #1f8eef;
