--- a/test/about.html
+++ b/test/about.html
@@ -10,7 +10,7 @@
 
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
 
 		<style>
 			html {
@@ -20,23 +20,37 @@
 				width: 70vw;
 				margin-left: auto;
 				margin-right: auto;
+				font-family: 'Lora', serif;
+				line-height: 1.3;
 			}
 			.main {
 				color:white;
-				font-size: 6vmin;
+				font-size: 5vmin;
 				line-height: 8vmin;
+				font-weight: 700;
 			}
 			p {
 				color:white;
 				font-size: 4.5vmin;
 				line-height: 6.5vmin;
 			}
+			a {
+				color:black;
+				text-decoration:none;
+				padding: 1px;
+			}
+			a:hover{
+				color:white;
+				background-color: black !important;
+				transition: color 0.3s ease-out;
+				transition: background-color 0.3s ease-out;
+			}
 		</style>
 	</head>
 	<body>
-		<p class="main">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu fringilla magna. Praesent ante lacus, molestie ac finibus ut, scelerisque ac nisl. In eu neque faucibus, consectetur ligula sodales, faucibus neque. In vel pretium arcu, at tempus massa. Nunc nec semper lacus. Ut eu tellus vehicula, auctor leo imperdiet, laoreet quam. Etiam ac fringilla ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean id lacus a augue feugiat facilisis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ultricies, mauris non malesuada fermentum, tellus turpis sagittis lacus, non lacinia lectus orci non lectus. Duis ut sagittis mauris.</p>
-		
-		<p>Donec augue eros, imperdiet eu odio eu, tempor malesuada odio. Aliquam efficitur erat at diam pharetra sagittis. Quisque fringilla efficitur massa. Nunc sit amet augue id est ultrices sodales ut ac ligula. Sed elementum arcu ut cursus mattis. Vestibulum luctus est id lectus mattis, non mollis dui mollis. Nam euismod euismod nulla id porttitor. In pharetra odio ac dolor ullamcorper, sit amet sagittis erat elementum. Phasellus vitae leo iaculis, suscipit tellus quis, venenatis tellus.
-		Etiam bibendum elementum nisl, vel pharetra arcu egestas sed. Vestibulum dictum malesuada metus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin tempor dui justo, non feugiat justo auctor a. Maecenas quis mi quis libero blandit venenatis at at est. Maecenas nisl augue, posuere eu nulla luctus, molestie tincidunt nulla. Nam non nulla eu lacus interdum ullamcorper. Quisque gravida scelerisque tellus, et tempus ligula elementum tempus. Integer et nibh turpis.</p>
+		<p class="main">Hi, I am Ayah Ramahi. I'm a <a href="http://engineering.ju.edu.jo/Departments/Home.aspx?DeptName=Computer%20Engineering" target="_blank" style="background-color:rgb(188, 159, 249)">computer engineering</a> undergraduate, <a href="https://githubcampus.expert/AyahRamahi/" target="_blank" style="background-color:
+		rgb(255, 170, 170)">GitHub Campus Expert</a>, and <a href="https://ju.acm.org/" target="_blank" style="background-color: rgb(170, 200, 255)">JU ACM Student Chapter</a> Vice President.</p>
+
+		<p>I </p>
 	</body>
 </html>
