--- a/test/test.html
+++ b/test/test.html
@@ -94,6 +94,7 @@
 					display:inline-block;
 					margin: 10px 10px 10px 10px;
 				}
+				
 			}
 		</style>
 		<script>
@@ -113,7 +114,9 @@
 						    "But only the fearless can be great.",
 						    "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...",
 						    "Go forth and have no fear.",
-						    "Lost in your mind? I wanna know..."
+						    "Lost in your mind? I wanna know...",
+						    "Seek, and ye shall find.",
+						    "Success in my only option, failure's not."
 						];
 					document.getElementById("quote").textContent = quotes[Math.floor(Math.random() * quotes.length)];
 				};
@@ -125,11 +128,9 @@
 			<p class="name">Ayah Ramahi</p>
 			<p class="desc" id="quote"></p>
 			<div class="bar">
-				<i><a style="color:#ef971e;" href="about.html">About</a></i>
-				<i><a style="color:#1eef56;" href="experience.html">Experience</a></i>
-				<i><a style="color:#1f8eef;" href="">Resume</a></i>
-				<i><a style="color:#efe81e;" href="education.html">Education</a></i>
-				<i><a style="color:#ef1e37;" href="projects.html">Projects</a></i>
+				<i><a style="color:#1f8eef;" href="education.html">Education</a></i>
+				<i><a style="color:#ef1e37;" href="about.html">About</a></i>
+				<i><a style="color:#bc9ff9;" href="projects.html">Projects</a></i>
 			</div>
 		</div>
 		<div class="social">
