--- a/test/test.html
+++ b/test/test.html
@@ -128,9 +128,9 @@
 			<p class="name">Ayah Ramahi</p>
 			<p class="desc" id="quote"></p>
 			<div class="bar">
-				<i><a style="color:#1f8eef;" href="education.html">Education</a></i>
-				<i><a style="color:#ef1e37;" href="about.html">About</a></i>
-				<i><a style="color:#bc9ff9;" href="projects.html">Projects</a></i>
+				<i><a style="color:#1f8eef;" href="projects.html">Projects</a></i>
+				<i><a style="color:#ef1e37;" href="education.html">Education</a></i>
+				<i><a style="color:#bc9ff9;" href="about.html">About</a></i>
 			</div>
 		</div>
 		<div class="social">
