--- a/test/about.html
+++ b/test/about.html
@@ -51,6 +51,8 @@
 		<p class="main">Hi, I am Ayah Ramahi. I'm a <a href="http://engineering.ju.edu.jo/Departments/Home.aspx?DeptName=Computer%20Engineering" target="_blank" style="background-color:rgb(188, 159, 249)">computer engineering</a> undergraduate, <a href="https://githubcampus.expert/AyahRamahi/" target="_blank" style="background-color:
 		rgb(255, 170, 170)">GitHub Campus Expert</a>, and <a href="https://ju.acm.org/" target="_blank" style="background-color: rgb(170, 200, 255)">JU ACM Student Chapter</a> Vice President.</p>
 
-		<p>I </p>
+		<p>I volunteer in both ACM Student Chapter and <a href="https://juprogrammingclub.github.io/" target="_blank" style="background-color: rgb(182, 209, 239)">JU Programming Club</a> where I teach students problem solving. I also volunteer in translating <a href="https://djangogirls.org/" target="_blank" style="background-color: rgb(247, 146, 29)">Django girls</a>, a website that teaches girls web development. And as the first GitHub Campus Expert in my country, I volunteer to organize events, in collaboration with <a href="https://github.com/" target="_blank" style="background-color: rgb(113, 119, 124)">GitHub</a>, to help my community.</p>
+
+		<p>I have participated for 2 years in ACPC (regional <a href="https://icpc.baylor.edu/" target="_blank" style="background-color: rgb(253, 188, 30);">ICPC</a>) after having our team in top 10 teams from all Jordanian teams. And I had a 3 months early internship in <a href="https://www.eskadenia.com/" target="_blank" style="background-color: rgb(0, 113, 137)">Eskadenia</a> working on an MFA widget using Angular. </p>
 	</body>
 </html>
