--- a/test/education.html
+++ b/test/education.html
@@ -10,7 +10,7 @@
 
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
 
 		<style>
 			html {
@@ -20,44 +20,55 @@
 				width: 70vw;
 				margin-left: auto;
 				margin-right: auto;
+				font-family: 'Lora', serif;
+				line-height: 1.3;
 				color:white;
 			}
-			ul h3{
-				font-size: 6vmin;
+			h3{
+				font-size: 5vmin;
 				line-height: 8vmin;
 			}
-			ul h5{
-				font-size: 5vmin;
-				line-height: 4vmin;	
-			}
-			ul p{
+			p{
 				font-size: 4.5vmin;
-				line-height: 6.5vmin;
+			}
+			li, .desc{
+				font-size: 3vmin;
 			}
 			a {
+				color:black;
+				text-decoration:none;
+				padding: 1px;
+			}
+			a:hover{
 				color:white;
+				background-color: black !important;
+				transition: color 0.3s ease-out;
+				transition: background-color 0.3s ease-out;
 			}
 		</style>
 	</head>
 	<body>
-		<ul>
-			<li>
-				<h3>Computer Engineering </h3>
-				<h5><a href="">University of Jordan</a></h5>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu fringilla magna. Praesent ante lacus, molestie ac finibus ut, scelerisque ac nisl. In eu neque faucibus, consectetur ligula sodales, faucibus neque. In vel pretium arcu, at tempus massa. Nunc nec semper lacus. Ut eu tellus vehicula, auctor leo imperdiet, laoreet quam. Etiam ac fringilla ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean id lacus a augue feugiat facilisis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ultricies, mauris non malesuada fermentum, tellus turpis sagittis lacus, non lacinia lectus orci non lectus. Duis ut sagittis mauris.</p>
-			</li>
-			<li>
-				<h3>Online Learning</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu fringilla magna. Praesent ante lacus, molestie ac finibus ut, scelerisque ac nisl. In eu neque faucibus, consectetur ligula sodales, faucibus neque. </p>
-				<ol>
-					<li><h5>Intro to Python (<a href="">Certificate</a>)<h5></li>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu fringilla magna. Praesent ante lacus, molestie ac finibus ut, scelerisque ac nisl.</p>
-					<li><h5>Pandas (<a href="">Certificate</a>)</h5></li>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu fringilla magna. Praesent ante lacus, molestie ac finibus ut, scelerisque ac nisl.</p>
-					<li><h5>Nand to Tetris (<a href="">Certificate</a>)</h5></li>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu fringilla magna. Praesent ante lacus, molestie ac finibus ut, scelerisque ac nisl.</p>
-				</ol>
-			</li>
+		<h3>BSc Computer Engineering &#128218 @ <a href="http://ju.edu.jo/home.aspx" target="_blank" style="background-color:rgb(1, 162, 166);">University of Jordan</a></h3>
+		<p>Final projects of some courses:</p>
+		<ul class="projects">
+			<li>Introduction to Database (team of 4, <a href="https://drive.google.com/open?id=1b92RdsX7wNPOBBL7HjAA_VQaVYiZOLq5" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
+			<li>Computer Organization (team of 2, <a href="https://drive.google.com/file/d/1cvz9XqtLRudT2wuIYBdXV3K7yqSoy9kx/view?usp=sharing" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
+			<li>Embedded Systems (team of 2, <a href="https://drive.google.com/open?id=1mBSHr_UsgoxHWvfniOoxS0wP9bQo4H9M" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
+			<li>Data Structures (team of 3, <a href="https://drive.google.com/file/d/1xm0k8Ez7vGcThmRKn2CoOgyP6wPT8epb/view?usp=sharing" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
+			<li>Digital Logic (team of 2, <a href="https://drive.google.com/open?id=14SOiOJwY7c4vmsEe12OWG1zndj33bFbm" target="_blank" style="background-color:rgb(154, 237, 205)">link</a>)</li>
 		</ul>
+		<p class="desc">In Computer Organization course we were asked to create a research paper &#128220 about some subject, <a href="https://drive.google.com/file/d/1OXKSyzNXm4_e0FPuDkg-iiIUP7t90tjr/view?usp=sharing" target="_blank" style="background-color:rgb(184, 38, 38)">mine</a> talked about IBM Q System One, the new quantum computer by IBM.</p>
+	
+		<h3>Online Learning &#128187</h3>
+		<p class="desc">I took several online courses on many platforms, like: <a href="https://www.edx.org/" target="_blank" style="background-color:rgb(184, 38, 103);">Edx</a> and <a href="https://www.coursera.org/" target="_blank" style="background-color:rgb(61, 137, 201)">Coursera</a>, which are: </p>
+		<ul>
+			<li>Learning how to learn (McMaster University & University of California San Diego)</li>
+			<li>CS50 Web Development Using Python and Javascript (Harvard, <a href="" target="_blank" style="background-color:rgb(230, 209, 255)">final project</a>)</li>
+			<li>Introduction to Data Science in Python (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/7ZHE3A5DPNNS" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+			<li>Interactivity With Javascript (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/TY34TMRUVRGK" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+			<li>Python Data Structres (University of Michigan, <a href="https://www.coursera.org/account/accomplishments/certificate/JV9VLBXERHFV" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+			<li>Nand to Tetris I (<a href="https://www.coursera.org/account/accomplishments/certificate/89QXLW9LXDM8" target="_blank" style="background-color:rgb(230, 209, 255)">Certificate</a>)</li>
+		</ul>
+		<h1 style="text-align: center;">&#10024</h1>
 	</body>
 </html>
