--- a/test/projects.html
+++ b/test/projects.html
@@ -61,7 +61,7 @@
 		</style>
 	</head>
 	<body>
-		<h3>Quotr &#128221 ( <a href="" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
+		<h3>Quotr &#128221 ( <a href="https://github.com/AyahRamahi/quotr" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
 		<p>Made using Flask, Quotr is a quotes-sharing website. A user can sign-up for an account, then login-in to it, then they can add their favorite quotes and who said them. On the home screen, a random quote from all the added ones by users is showed. </p>
 		<div class="tags">
 			<i style="background-color:rgb(224, 159, 152);">Flask</i>
@@ -70,7 +70,7 @@
 			<i style="background-color:rgb(51, 103, 145);;">PostgreSQL</i>
 		</div>
 
-		<h3>A-Read &#128218 ( <a href="" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
+		<h3>A-Read &#128218 ( <a href="https://github.com/AyahRamahi/A-Read" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
 		<p>Made using Flask, A-Read is a website to rate books and give reviews about them. A user can search for books in the database, give rates, add reviews and read others users reviews. A Goodreads API was used to give a json file that has a books information gives its ISBN.</p>
 		<div class="tags">
 			<i style="background-color:rgb(224, 159, 152);">Flask</i>
@@ -79,7 +79,7 @@
 			<i style="background-color:rgb(51, 103, 145);;">PostgreSQL</i>
 		</div>
 
-		<h3>Chit-Chat 💬 ( <a href="" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
+		<h3>Chit-Chat 💬 ( <a href="https://github.com/AyahRamahi/Chit-Chat" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
 		<p>Made using Flask, Chit-Chat is a website used to create chat rooms with no need to register for an account, and chat to others on these rooms. </p>
 		<div class="tags">
 			<i style="background-color:rgb(224, 159, 152);">Flask</i>
