--- a/test/test.html
+++ b/test/test.html
@@ -31,6 +31,9 @@
 				margin-bottom: 0;
 				color:white;
 			}
+			.emoji{
+				text-align: center;
+			}
 			.desc{
 				margin-top:0;
 				color:rgb(84, 97, 108);
@@ -94,7 +97,6 @@
 					display:inline-block;
 					margin: 10px 10px 10px 10px;
 				}
-				
 			}
 		</style>
 		<script>
@@ -126,6 +128,17 @@
 	<body>
 		<div class="content">
 			<p class="name">Ayah Ramahi</p>
+			<div class="emoji">
+				<i>&#128640</i>
+				<i>&#8987</i>
+				<i>&#9803</i>
+				<i>&#127756</i>
+				<i>&#128681</i>
+				<i>&#127922</i>
+				<i>&#128187</i>
+				<i>&#128760</i>
+				<i>&#128747</i>
+			</div>
 			<p class="desc" id="quote"></p>
 			<div class="bar">
 				<i><a style="color:#1f8eef;" href="projects.html">Projects</a></i>
