--- a/test/about.html
+++ b/test/about.html
@@ -8,44 +8,12 @@
 		
 		<title>Ayah Ramahi</title>
 
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
+		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
 
-		<style>
-			html {
-				background-color: #161618;
-			}
-			body {
-				width: 70vw;
-				margin-left: auto;
-				margin-right: auto;
-				font-family: 'Lora', serif;
-				line-height: 1.3;
-			}
-			.main {
-				color:white;
-				font-size: 5vmin;
-				line-height: 8vmin;
-				font-weight: 700;
-			}
-			p {
-				color:white;
-				font-size: 4.5vmin;
-				line-height: 6.5vmin;
-			}
-			a {
-				color:black;
-				text-decoration:none;
-				padding: 1px;
-			}
-			a:hover{
-				color:white;
-				background-color: black !important;
-				transition: color 0.3s ease-out;
-				transition: background-color 0.3s ease-out;
-			}
-		</style>
+		<!-- personal styling -->
+		<link href="assets/about-css.css" rel="stylesheet">
+
 	</head>
 	<body>
 		<p class="main">Hi &#9996, I am Ayah Ramahi. I'm a <a href="http://engineering.ju.edu.jo/Departments/Home.aspx?DeptName=Computer%20Engineering" target="_blank" style="background-color:rgb(188, 159, 249)">computer engineering</a> undergraduate, <a href="https://githubcampus.expert/AyahRamahi/" target="_blank" style="background-color:
