--- a/test/education.html
+++ b/test/education.html
@@ -8,44 +8,12 @@
 		
 		<title>Ayah Ramahi</title>
 
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
+		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
 
-		<style>
-			html {
-				background-color: #161618;
-			}
-			body {
-				width: 70vw;
-				margin-left: auto;
-				margin-right: auto;
-				font-family: 'Lora', serif;
-				line-height: 1.3;
-				color:white;
-			}
-			h3{
-				font-size: 5vmin;
-				line-height: 8vmin;
-			}
-			p{
-				font-size: 4.5vmin;
-			}
-			li, .desc{
-				font-size: 3vmin;
-			}
-			a {
-				color:black;
-				text-decoration:none;
-				padding: 1px;
-			}
-			a:hover{
-				color:white;
-				background-color: black !important;
-				transition: color 0.3s ease-out;
-				transition: background-color 0.3s ease-out;
-			}
-		</style>
+		<!-- personal styling -->
+		<link href="assets/education-css.css" rel="stylesheet">
+
 	</head>
 	<body>
 		<h3>BSc Computer Engineering &#128218 @ <a href="http://ju.edu.jo/home.aspx" target="_blank" style="background-color:rgb(1, 162, 166);">University of Jordan</a></h3>
