--- a/test/projects.html
+++ b/test/projects.html
@@ -8,57 +8,12 @@
 		
 		<title>Ayah Ramahi</title>
 
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
+		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
 
-		<style>
-			html {
-				background-color: #161618;
-			}
-			body {
-				width: 70vw;
-				margin-left: auto;
-				margin-right: auto;
-				font-family: 'Lora', serif;
-				line-height: 1.3;
-				color:white;
-			}
-			h3{
-				font-size: 5vmin;
-				line-height: 8vmin;
-				margin-bottom: 0.5vmin;
-			}
-			p{
-				font-size: 4.5vmin;
-				margin-top: 0;
-				margin-bottom: 2vmin;
-			}
-			li, .desc{
-				font-size: 3vmin;
-			}
-			a {
-				color:black;
-				text-decoration:none;
-				padding: 1px;
-			}
-			a:hover{
-				color:white;
-				background-color: black !important;
-				transition: color 0.3s ease-out;
-				transition: background-color 0.3s ease-out;
-			}
-			.tags i{
-				color:black;
-				font-size: 3vmin;
-				margin-right: 2vmin;
-				padding:2px;
-				border-radius: 3px;
-			}
-			.tags{
-				margin-bottom: 5vmin;
-			}
-		</style>
+		<!-- personal styling -->
+		<link href="assets/projects-css.css" rel="stylesheet">
+
 	</head>
 	<body>
 		<h3>Quotr &#128221 ( <a href="https://github.com/AyahRamahi/quotr" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
