--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,10 @@
 		<div class="tags">
 			<i style="background-color:rgb(224, 159, 152);">Flask</i>
 			<i style="background-color:rgb(55, 118, 171);">Python</i>
-			<i style="background-color:rgb(232, 91, 70);;">SQLAlchemy</i>
-			<i style="background-color:rgb(51, 103, 145);;">PostgreSQL</i>
+			<i style="background-color:rgb(232, 91, 70);">SQLAlchemy</i>
+			<i style="background-color:rgb(51, 103, 145);">PostgreSQL</i>
+			<i style="background-color:rgb(241, 101, 40);">HTML</i>
+			<i style="background-color:rgb(27, 131, 190);">CSS</i>
 		</div>
 
 		<h3>A-Read &#128218 ( <a href="https://github.com/AyahRamahi/A-Read" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
@@ -32,6 +34,9 @@
 			<i style="background-color:rgb(55, 118, 171);">Python</i>
 			<i style="background-color:rgb(232, 91, 70);;">SQLAlchemy</i>
 			<i style="background-color:rgb(51, 103, 145);;">PostgreSQL</i>
+			<i style="background-color:rgb(241, 101, 40);">HTML</i>
+			<i style="background-color:rgb(27, 131, 190);">CSS</i>
+			<i style="background-color:rgb(245, 243, 236);">Goodreads API</i>
 		</div>
 
 		<h3>Chit-Chat 💬 ( <a href="https://github.com/AyahRamahi/Chit-Chat" target="_blank" style="background-color:rgb(202, 214, 197);">Source Code</a> )</h3>
@@ -40,6 +45,7 @@
 			<i style="background-color:rgb(224, 159, 152);">Flask</i>
 			<i style="background-color:rgb(55, 118, 171);">Python</i>
 			<i style="background-color:rgb(242, 234, 145);">Socket.IO</i>
+			<i style="background-color:rgb(241, 101, 40);">HTML</i>
 		</div>
 		<h1 style="text-align: center;">&#10024</h1>
 	</body>
